--- a/index.html
+++ b/index.html
@@ -1,14 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/main.css">
-  <title>Template</title>
-</head>
-<body>
 
-  
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Insure</title>
+    <link rel="stylesheet" href="./css/main.css">
+</head>
+
+<body>
+    <!-- HEADER START -->
+    <header class="site-header">
+        <div class="container">
+            <div class="header-wrap">
+                <a class="logo" href="./index.html">
+                    <img src="./images/INSURE.svg" width="111" height="18" alt="Insure site's logo">
+                </a>
+                <button class="header-wrap__btn"></button>
+                <div class="header-wrap__box">
+                    <nav class="site-nav">
+                        <ul class="site-nav__list">
+                            <li class="site-nav__item">
+                                <a class="site-nav__link" href="#">HOW WE WORK</a>
+                            </li>
+                            <li class="site-nav__item">
+                                <a class="site-nav__link" href="#">BLOG</a>
+                            </li>
+                            <li class="site-nav__item">
+                                <a class="site-nav__link" href="#">ACCOUNT</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <span class="header-wrap__tiny">
+                        <a class="view-link" href="#">VIEW PLANS</a>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- HEADER END -->
+
+    <!-- MAIN START -->
+    <main>
+        <!-- SECTION HUMANIZING START -->
+        <section class="humanizing">
+            <div class="container">
+                <div class="humanizing-wrap">
+                    <div class="humanizing-wrap__box">
+                        <div class="humanizing-wrap__title-box">
+                            <h1 class="humanizing-wrap__title">
+                                Humanizing your insurance.
+                            </h1>
+                        </div>
+                        <p class="humanizing-wrap__text">
+                            Get your life insurance coverage easier and faster. We blend our expertise and technology to
+                            help you find the plan that’s right for you. Ensure you and your loved ones are protected.
+                        </p>
+                        <span class="humanizing-wrap__tiny">
+                            <a class="humanizing-wrap__link" href="#">VIEW PLANS</a>
+                        </span>
+                    </div>
+                    <img class="humanizing-wrap__img" src="./images/family.png" width="540" height="650"
+                        srcset="./images/family.png 1x, ./images/family-retina.png 2x" alt="
+                walking family parents and two children">
+                </div>
+            </div>
+        </section>
+        <!-- SECTION HUMANIZING END -->
+
+        <!-- SECTION DIFFERENT START -->
+        <section class="different">
+            <div class="container">
+                <div class="different-wrap">
+                    <h2 class="different-wrap__title">We’re different</h2>
+                    <ul class="different-list">
+                        <li class="different-list__item">
+                            <h3 class="different-list__title">Snappy Process</h3>
+                            <p class="different-list__text">
+                                Our application process can be completed in minutes, not hours. Don’t get stuck filling
+                                in tedious forms.
+                            </p>
+                        </li>
+                        <li class="different-list__item">
+                            <h3 class="different-list__title">Affordable Prices</h3>
+                            <p class="different-list__text">
+                                We don’t want you worrying about high monthly costs. Our prices may be low, but we still
+                                offer the best coverage possible.
+                            </p>
+                        </li>
+                        <li class="different-list__item">
+                            <h3 class="different-list__title">People First</h3>
+                            <p class="different-list__text">
+                                Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re
+                                covered when you need it.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- SECTION DIFFERENT END -->
+        <article class="find">
+            <div class="container">
+                <div class="find-wrap">
+                    <div class="find-wrap__title-box">
+                        <h2 class="find-wrap__title">Find out more about how we work</h2>
+                    </div>
+                    <span class="find-wrap__tiny">
+                        <a class="find-wrap__link" href="#">HOW WE WORK</a>
+                    </span>
+                </div>
+            </div>
+        </article>
+    </main>
+    <!-- MAIN END -->
+    <!-- FOOTER START -->
+    <footer class="site-footer">
+        <div class="container">
+            <div class="site-footer__wrap">
+                <a class="logo-footer" href="#">
+                    <img class="logo-footer__img" src="./images/INSURE.svg" width="111" height="18" alt="Insure site's logo">
+                </a>
+                    <ul class="site-footer__list">
+                        <li class="site-footer__item">
+                            <a href="#">
+                                <img src="./images/facebookicon.svg" width="24" height="24" alt="facebook">
+                            </a>
+                        </li>
+                        <li class="site-footer__item">
+                            <a href="#">
+                                <img src="./images/twittericon.svg" width="24" height="20" alt="twitter">
+                            </a>
+                        </li>
+                        <li class="site-footer__item">
+                            <a href="#">
+                                <img src="./images/pinteresticon.svg" width="24" height="24" alt="pinterest">
+                            </a>
+                        </li>
+                        <li class="site-footer__item">
+                            <a href="#">
+                                <img src="./images/instagramicon.svg" width="24" height="24" alt="instagram">
+                            </a>
+                        </li>
+                    </ul>
+                
+            </div>
+            <ul class="footer-list">
+                <li class="footer-list__item">
+                    <p class="footer-list__text">OUR COMPANY</p>
+                    <ul class="footer-list__link-list">
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">HOW WE WORK</a>
+                        </li>
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">WHY INSURE?</a>
+                        </li>
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">VIEW PLANS</a>
+                        </li>
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">REVIEWS</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer-list__item">
+                    <p class="footer-list__text">HELP ME</p>
+                    <ul class="footer-list__link-list">
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">FAQ</a>
+                        </li>
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">TERMS OF USE</a>
+                        </li>
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">PRIVACY POLICY</a>
+                        </li>
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">COOKIES</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer-list__item">
+                    <p class="footer-list__text">CONTACT</p>
+                    <ul class="footer-list__link-list">
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">SALES</a>
+                        </li>
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">SUPPORT</a>
+                        </li>
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">LIVE CHAT</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer-list__item">
+                    <p class="footer-list__text">OTHERS</p>
+                    <ul class="footer-list__link-list">
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">CAREERS</a>
+                        </li>
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">PRESS</a>
+                        </li>
+                        <li class="footer-list__link-item">
+                            <a class="footer-list__link" href="#">LICENSES</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <!-- FOOTER END -->
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
